navbar changes and shadcn library integration

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,16 @@
 {
   "projects": {
-    "default": "sellarweb-66cad"
-  }
+    "default": "sellar-88ced",
+    "Website": "sellar-88ced"
+  },
+  "targets": {
+    "sellar-88ced": {
+      "hosting": {
+        "admin": [
+          "sellar-d033b"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
