--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_API_KEY = AIzaSyCdpPP6YTbDd3usuXOyl0haWBC-V3MNJ0Y
-VITE_AUTH_DOMAIN = sellarweb-66cad.firebaseapp.com
-VITE_PROJECT_ID = sellarweb-66cad
-VITE_STORAGE_BUCKET = sellarweb-66cad.firebasestorage.app
-VITE_MESSAGING_SENDER_ID = 131263031768
-VITE_APP_ID = 1:131263031768:web:70e4a508c08cb8543deaad
-VITE_MEASUREMENT_ID = G-S9DQL7JGR5
+VITE_API_KEY = AIzaSyAgd7X2XDJdRj5ySbu1NwMd1w9cS3rLDDA
+VITE_AUTH_DOMAIN = sellar-88ced.firebaseapp.com
+VITE_PROJECT_ID = sellar-88ced
+VITE_STORAGE_BUCKET = sellar-88ced.firebasestorage.app
+VITE_MESSAGING_SENDER_ID = 743626390429
+VITE_APP_ID = 1:743626390429:web:c4227a3479dc584a4b0d74
+VITE_MEASUREMENT_ID = G-NX8V6LCSKQ
